# emailsched

./: Cargo.toml  Config.toml
src/: config.rs  display.rs  email.rs  events.rs  extraction.rs  main.rs  ncurses.rs
