[package]
name = "my_emails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
imap = "3.0.0-alpha.10"
native-tls = "0.2.11"
regex = "1.8.3"
serde = {version = "1.0.163", features = ["derive"]}
toml = "0.7.4"

